Configurless service host

--- a/theDiary.EasyDNS.Windows.Service/App.config
+++ b/theDiary.EasyDNS.Windows.Service/App.config
@@ -3,7 +3,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
   </startup>
-  <system.serviceModel>
+<!--  <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBehaviour">
@@ -13,15 +13,14 @@
     </behaviors>
     <services>
       <service name="theDiary.EasyDNS.Windows.Service.WCFServices.DNSService" behaviorConfiguration="mexBehaviour">
-        <endpoint address="DNSService" binding="netTcpBinding" contract="theDiary.EasyDNS.Windows.Service.WCFServices.IDNSService">
-        </endpoint>
+        <endpoint address="DNSService" binding="netTcpBinding" contract="theDiary.EasyDNS.Windows.Service.WCFServices.IDNSService"/>
         <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://JONATHANS-PC:8090/EasyDNS" />
+            <add baseAddress="net.tcp://localhost:8090/EasyDNS"/>
           </baseAddresses>
         </host>
       </service>
     </services>
-  </system.serviceModel>
+  </system.serviceModel>-->
 </configuration>
