Fix for MetaData Discovery not working correctly on standalone service Fix for incorrect Uri been registered on standalone service. Added WirelessNetwork information to Service and support on client. Moved all Service singleton's to an isolated singleton class for cleaner code.

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ __pycache__/
 *.pyc
 /Setup/EasyDNS.exe
 /Setup/EasyDNSService.exe
+/EasyDNS/app.config
+/EasyDNS/Connected Services/DNSService/System.Net1.xsd
